Fix toc on mobile

--- a/theme/html/html.css
+++ b/theme/html/html.css
@@ -838,16 +838,15 @@ div.navbar p a {
       width: auto; }
 
   div.navbar {
-    position: relative;
-    padding: 10px 20px 10px 20px;
+    position: fixed;
+    padding: 0;
     border-bottom: 2px solid #e8e8e8;
     box-shadow: 0px 0px 0px #f0f0f0;
-    text-align: center; }
-
-  div.navbar h1 {
-    float: none;
-    margin-bottom: 10px; }
+    text-align: left; }
 
   div.navbar p {
     float: none;
-    text-indent: 0; } }
+    text-indent: 0; }
+
+  .btn.open {
+    position: absolute; } }
